Remove old python callers

--- a/Contest.vcxproj
+++ b/Contest.vcxproj
@@ -1188,6 +1188,10 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="UVa\10300\10303.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="UVa\10300\10305.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
@@ -3095,6 +3099,7 @@
     <None Include="UVa\10100\10198.py" />
     <None Include="UVa\10200\10213.py" />
     <None Include="UVa\10200\10220.py" />
+    <None Include="UVa\10300\10303.py" />
     <None Include="UVa\10300\10334.py" />
     <None Include="UVa\10400\10494.py" />
     <None Include="UVa\10500\10523.py" />
