--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2528,6 +2528,9 @@
     <ClCompile Include="UVa\10200\10213.cpp">
       <Filter>UVa\10200</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10300\10303.cpp">
+      <Filter>UVa\10300</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
@@ -2770,6 +2773,9 @@
     </None>
     <None Include="UVa\10200\10213.py">
       <Filter>UVa\10200</Filter>
+    </None>
+    <None Include="UVa\10300\10303.py">
+      <Filter>UVa\10300</Filter>
     </None>
   </ItemGroup>
 </Project>
