--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2534,6 +2534,9 @@
     <ClCompile Include="UVa\300\324.cpp">
       <Filter>UVa\300</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10100\10171.cpp">
+      <Filter>UVa\10100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
