--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2540,6 +2540,9 @@
     <ClCompile Include="UVa\400\429.cpp">
       <Filter>UVa\400\420</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\1500\1584.cpp">
+      <Filter>UVa\1500</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
