--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2543,6 +2543,9 @@
     <ClCompile Include="UVa\1500\1584.cpp">
       <Filter>UVa\1500</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\500\507.cpp">
+      <Filter>UVa\500</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
