--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2546,6 +2546,9 @@
     <ClCompile Include="UVa\500\507.cpp">
       <Filter>UVa\500</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\900\991.cpp">
+      <Filter>UVa\900</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
