--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2549,6 +2549,9 @@
     <ClCompile Include="UVa\900\991.cpp">
       <Filter>UVa\900</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10100\10147.cpp">
+      <Filter>UVa\10100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
