--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2558,6 +2558,9 @@
     <ClCompile Include="UVa\700\712.cpp">
       <Filter>UVa\700</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\500\548.cpp">
+      <Filter>UVa\500</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
