--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2561,6 +2561,9 @@
     <ClCompile Include="UVa\500\548.cpp">
       <Filter>UVa\500</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10000\10025.cpp">
+      <Filter>UVa\10000</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
