--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2564,6 +2564,9 @@
     <ClCompile Include="UVa\10000\10025.cpp">
       <Filter>UVa\10000</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10900\10959.cpp">
+      <Filter>UVa\10900</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
