--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2567,6 +2567,9 @@
     <ClCompile Include="UVa\10900\10959.cpp">
       <Filter>UVa\10900</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\800\871.cpp">
+      <Filter>UVa\800</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
