--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2573,6 +2573,9 @@
     <ClCompile Include="UVa\10600\10642.cpp">
       <Filter>UVa\10600</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10300\10330.cpp">
+      <Filter>UVa\10300</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
