--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2579,6 +2579,9 @@
     <ClCompile Include="UVa\11300\11396.cpp">
       <Filter>UVa\11300</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10000\10010.cpp">
+      <Filter>UVa\10000</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
