--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2582,6 +2582,9 @@
     <ClCompile Include="UVa\10000\10010.cpp">
       <Filter>UVa\10000</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10600\10685.cpp">
+      <Filter>UVa\10600</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
