--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2588,6 +2588,9 @@
     <ClCompile Include="UVa\500\580.cpp">
       <Filter>UVa\500</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10100\10114.cpp">
+      <Filter>UVa\10100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
