--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2591,6 +2591,9 @@
     <ClCompile Include="UVa\10100\10114.cpp">
       <Filter>UVa\10100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10000\10057.cpp">
+      <Filter>UVa\10000</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
