--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2594,6 +2594,9 @@
     <ClCompile Include="UVa\10000\10057.cpp">
       <Filter>UVa\10000</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10900\10908.cpp">
+      <Filter>UVa\10900</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
