--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2600,6 +2600,9 @@
     <ClCompile Include="UVa\11200\11231.cpp">
       <Filter>UVa\11200</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10100\10132.cpp">
+      <Filter>UVa\10100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
