--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2609,6 +2609,9 @@
     <ClCompile Include="UVa\10800\10815.cpp">
       <Filter>UVa\10800</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10500\10507.cpp">
+      <Filter>UVa\10500</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
