--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2615,6 +2615,9 @@
     <ClCompile Include="UVa\10300\10311.cpp">
       <Filter>UVa\10300</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10400\10490.cpp">
+      <Filter>UVa\10400</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
