ac, tested minBase() and stringToInt().

--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2621,6 +2621,9 @@
     <ClCompile Include="UVa\10300\10306.cpp">
       <Filter>UVa\10300</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10000\10093.cpp">
+      <Filter>UVa\10000</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
