--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2624,6 +2624,9 @@
     <ClCompile Include="UVa\10000\10093.cpp">
       <Filter>UVa\10000</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\500\587.cpp">
+      <Filter>UVa\500</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
